--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ annotated-types==0.7.0
 asgiref==3.8.1
 Django==5.0.6
 django-bootstrap-datepicker-plus==5.0.5
+django-cors-headers==4.3.1
+djangorestframework==3.15.1
 pillow==10.3.0
 pydantic==2.7.1
 pydantic_core==2.18.2
